--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <h3>Engineering Excellence!</h3>
           <p class="fst-italic">
 <!--             My journey as a final year student at Shri Ramdeobaba College of Engineering and Management, Nagpur, has been an odyssey of knowledge and innovation. Equipped with a Bachelor of Technology in Information Technology, my academic voyage has forged a solid foundation, Through which I've embraced responsibilities, shaping me into a forward-thinking engineer poised for setting the stage for a future filled with boundless creativity and technological marvels. -->
-           My journey as a final year student at Shri Ramdeobaba College of Engineering and Management, Nagpur, has been an odyssey of knowledge and innovation. Equipped with a Bachelor of Technology in Information Technology, my academic voyage has forged a solid foundation to delved into the realms of Cloud Computing, Machine Learning, UI/UX Design, and Data Analytics. Through these endeavors, I've embraced responsibilities,with boundless creativity to achieve technological marvels.
+           My journey as a final year student at Shri Ramdeobaba College of Engineering and Management, Nagpur, has been an odyssey of knowledge and innovation. Equipped with a Bachelor of Technology in Information Technology, my academics has forged a solid foundation of Cloud Computing, Machine Learning, UI/UX Design, and Data Analytics. Through these endeavors, I've embraced responsibilities,with boundless creativity to achieve technological marvels.
             
             <h3>Vision for Tomorrow</h3>
           <p class="fst-italic">
