--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Who Am I?</h3>
           <p class="fst-italic">
-            I am not just another engineer, I am the architect of possibilities, the weaver of digital dreams, and a relentless seeker of excellence. Hailing from the vibrant city of Aurangabad, Maharashtra, I bring a dynamic blend of skills, leadership, and creativity to the table.
+            I am Hrushikesh Dagwar, an engineering student with a relentless pursuit of excellence. Hailing from the vibrant city of Aurangabad, Maharashtra, I bring a dynamic blend of skills, leadership, and creativity to the table.
             With a passion for continuous learning and growth, I thrive on taking on new challenges and pushing the boundaries of what's possible. I believe in the power of technology to transform ideas into reality, and my mission is to harness this power to create innovative solutions that leave a lasting impact.
             
         <!-- <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left"> -->
