--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <h3>Who Am I?</h3>
           <p class="fst-italic">
             I am Hrushikesh Dagwar, an engineering student with a relentless pursuit of excellence. Hailing from the vibrant city of Aurangabad, Maharashtra, I bring a dynamic blend of skills, leadership, and creativity to the table.
-            With a passion for continuous learning and growth, I thrive on taking on new challenges and pushing the boundaries of what's possible. The power of technology can transform ideas into reality, and i truly believe in creating innovative solutions that leave a lasting impact.
+            With a passion for continuous learning and growth, I thrive on taking on new challenges and pushing the boundaries of what's possible! The power of technology can transform ideas into reality, and i truly believe in creating innovative solutions that leaves a lasting impact.
             
         <!-- <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left"> -->
           <h3>Engineering Excellence!</h3>
