--- a/index.html
+++ b/index.html
@@ -145,7 +145,13 @@
           <p class="fst-italic">
 <!--             My journey as a final year student at Shri Ramdeobaba College of Engineering and Management, Nagpur, has been an odyssey of knowledge and innovation. Equipped with a Bachelor of Technology in Information Technology, my academic voyage has forged a solid foundation, Through which I've embraced responsibilities, shaping me into a forward-thinking engineer poised for setting the stage for a future filled with boundless creativity and technological marvels. -->
            My journey as a final year student at Shri Ramdeobaba College of Engineering and Management, Nagpur, has been full of knowledge and self development. Equipped with a Bachelor of Technology in Information Technology, my academics has forged a solid foundation of Cloud Computing, Machine Learning, Data Analytics, and UI/UX Design. Through these endeavors, I have embraced challenging responsibilities and leadership roles, allowing me to expand my boundries beyound academics.
-            
+
+
+            <p>
+<!--             My journey as a final year student at Shri Ramdeobaba College of Engineering and Management, Nagpur, has been an odyssey of knowledge and innovation. Equipped with a Bachelor of Technology in Information Technology, my academic voyage has forged a solid foundation, Through which I've embraced responsibilities, shaping me into a forward-thinking engineer poised for setting the stage for a future filled with boundless creativity and technological marvels. -->
+           My journey as a final year student at Shri Ramdeobaba College of Engineering and Management, Nagpur, has been full of knowledge and self development. Equipped with a Bachelor of Technology in Information Technology, my academics has forged a solid foundation of Cloud Computing, Machine Learning, Data Analytics, and UI/UX Design. Through these endeavors, I have embraced challenging responsibilities and leadership roles, allowing me to expand my boundries beyound academics.
+
+              
             <h3>Vision for Tomorrow</h3>
           <p class="fst-italic">
             In my quest, I foresee a future in which technology is more than just a tool, but also a catalyst for positive change. I am dedicated to pushing the boundaries of innovation by developing solutions that redefine possibilities and help form a brighter, more connected world. Let us begin on a journey of invention together, leaving a lasting legacy in the ever-changing realm of technology.
