--- a/index.html
+++ b/index.html
@@ -136,24 +136,20 @@
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Who Am I?</h3>
-          <p class="fst-italic">
+<!--           <p class="fst-italic> -->
+          <p>
             I am Hrushikesh Dagwar, an engineering student with a relentless pursuit of excellence. Hailing from the vibrant city of Aurangabad, Maharashtra, I bring a dynamic blend of skills, leadership, and creativity to the table.
             With a passion for continuous learning and growth, I thrive on taking on new challenges and pushing the boundaries of what's possible! The power of technology can transform ideas into reality, and i truly believe in creating innovative solutions that leaves a lasting impact.
             
         <!-- <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left"> -->
           <h3>Engineering Excellence!</h3>
-          <p class="fst-italic">
-<!--             My journey as a final year student at Shri Ramdeobaba College of Engineering and Management, Nagpur, has been an odyssey of knowledge and innovation. Equipped with a Bachelor of Technology in Information Technology, my academic voyage has forged a solid foundation, Through which I've embraced responsibilities, shaping me into a forward-thinking engineer poised for setting the stage for a future filled with boundless creativity and technological marvels. -->
-           My journey as a final year student at Shri Ramdeobaba College of Engineering and Management, Nagpur, has been full of knowledge and self development. Equipped with a Bachelor of Technology in Information Technology, my academics has forged a solid foundation of Cloud Computing, Machine Learning, Data Analytics, and UI/UX Design. Through these endeavors, I have embraced challenging responsibilities and leadership roles, allowing me to expand my boundries beyound academics.
-
-
             <p>
 <!--             My journey as a final year student at Shri Ramdeobaba College of Engineering and Management, Nagpur, has been an odyssey of knowledge and innovation. Equipped with a Bachelor of Technology in Information Technology, my academic voyage has forged a solid foundation, Through which I've embraced responsibilities, shaping me into a forward-thinking engineer poised for setting the stage for a future filled with boundless creativity and technological marvels. -->
            My journey as a final year student at Shri Ramdeobaba College of Engineering and Management, Nagpur, has been full of knowledge and self development. Equipped with a Bachelor of Technology in Information Technology, my academics has forged a solid foundation of Cloud Computing, Machine Learning, Data Analytics, and UI/UX Design. Through these endeavors, I have embraced challenging responsibilities and leadership roles, allowing me to expand my boundries beyound academics.
 
               
             <h3>Vision for Tomorrow</h3>
-          <p class="fst-italic">
+          <p>
             In my quest, I foresee a future in which technology is more than just a tool, but also a catalyst for positive change. I am dedicated to pushing the boundaries of innovation by developing solutions that redefine possibilities and help form a brighter, more connected world. Let us begin on a journey of invention together, leaving a lasting legacy in the ever-changing realm of technology.
             <!-- </p>
           <div class="row">
