--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
 
       <div class="section-title">
         <h2>Contact</h2>
-        <p>Contact Me</p>
+        <p>Let's Connect</p>
       </div>
 
       <div class="row mt-2">
