whats next ----> Vision for Tomorrow

--- a/index.html
+++ b/index.html
@@ -139,18 +139,19 @@
 <!--           <p class="fst-italic> -->
           <p>
             I am Hrushikesh Dagwar, an engineering student with a relentless pursuit of excellence. Hailing from the vibrant city of Aurangabad, Maharashtra, I bring a dynamic blend of skills, leadership, and creativity to the table.
-            With a passion for continuous learning and growth, I thrive on taking on new challenges and pushing the boundaries of what's possible!<br>The power of technology can transform ideas into reality, and i truly believe in creating innovative solutions that leaves a lasting impact.
+            With a passion for continuous learning and growth, I thrive on taking on new challenges and pushing the boundaries of what's possible! The power of technology can transform ideas into reality, and i truly believe in creating innovative solutions that leaves a lasting impact.
             
         <!-- <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left"> -->
           <h3>Engineering Excellence!</h3>
             <p>
 <!--             My journey as a final year student at Shri Ramdeobaba College of Engineering and Management, Nagpur, has been an odyssey of knowledge and innovation. Equipped with a Bachelor of Technology in Information Technology, my academic voyage has forged a solid foundation, Through which I've embraced responsibilities, shaping me into a forward-thinking engineer poised for setting the stage for a future filled with boundless creativity and technological marvels. -->
-           My journey as a final year student at Shri Ramdeobaba College of Engineering and Management, Nagpur, has been full of knowledge and self development. Equipped with a Bachelor of Technology in Information Technology, my academics has forged a solid foundation of Cloud Computing, Machine Learning, Data Analytics, and UI/UX Design. Through these endeavors, I have embraced challenging responsibilities and leadership roles, allowing me to expand my boundries beyound academics.
+           My journey as a final year student at Shri Ramdeobaba College of Engineering and Management, Nagpur. Has been full of growth and self development. Equipped with a Bachelor of Technology in Information Technology, my academics has forged a solid foundation of Cloud Computing, Machine Learning, Data Analytics, and UI/UX Design. Through these endeavors, I have embraced challenging responsibilities and leadership roles, allowing me to expand my boundries beyound academics.
 
               
-            <h3>Vision for Tomorrow</h3>
+            <h3>What's Next?</h3>
           <p>
-            In my quest, I foresee a future in which technology is more than just a tool, but also a catalyst for positive change. I am dedicated to pushing the boundaries of innovation by developing solutions that redefine possibilities and help form a brighter, more connected world. Let us begin on a journey of invention together, leaving a lasting legacy in the ever-changing realm of technology.
+<!--             In my quest, I foresee a future in which technology is more than just a tool, but also a catalyst for positive change. I am dedicated to pushing the boundaries of innovation by developing solutions that redefine possibilities and help form a brighter, more connected world. Let us begin on a journey of invention together, leaving a lasting legacy in the ever-changing realm of technology. -->
+            As I approach my graduation in June 2024, I'm eagerly gearing up to launch my career in IT industry,  The journey so far has equipped me with a diverse skill set that I'm eager to apply to real-world challenges. I'm actively seeking opportunities, <!--as a software developer-->where I can apply my skills, contribute to exciting projects, and continue my journey of growth and innovation. Also, I am open to relocate!
             <!-- </p>
           <div class="row">
             <div class="col-lg-6">
