--- a/index.html
+++ b/index.html
@@ -520,7 +520,23 @@
 
 
           <h3 class="resume-title">Professional Experience</h3>
-          
+
+          <div class="resume-item">
+            <h4>Project Intern</h4>
+            <h5>TATA Consultancy Services</h5>
+            <h5>Feb 2024 – Present</h5>
+            <p><em>Onsite – Nagpur</em></p>
+            <p>
+            <ul>
+              <li> Web design and development team member with a focus on creating impactful User Experience .</li>
+              <li> Proficient in design tools like Figma, Photoshop to produce visually stunning and intuitive designs.</li>
+              <li> Successfully achieved effective design implementation Using HTML, CSS.</li>
+              <li> Explored other domains such as MySQL, PHP, JavaScript.</li>
+              <li> Collaborated closely with teams to deliver cutting-edge design solutions.</li>
+            </ul>
+            </p>
+          </div>
+        
           <div class="resume-item">
             <h4>Web Design Intern</h4>
             <h5>Tech KBC   </h5>
@@ -530,7 +546,7 @@
             <ul>
               <li> Web design and development team member with a focus on creating impactful User Experience .</li>
               <li> Proficient in design tools like Figma, Photoshop to produce visually stunning and intuitive designs.</li>
-              <li> Successfully /achieved effective design implementation Using HTML, CSS.</li>
+              <li> Successfully achieved effective design implementation Using HTML, CSS.</li>
               <li> Explored other domains such as MySQL, PHP, JavaScript.</li>
               <li> Collaborated closely with teams to deliver cutting-edge design solutions.</li>
             </ul>
