--- a/index.html
+++ b/index.html
@@ -528,11 +528,11 @@
             <p><em>Onsite – Nagpur</em></p>
             <p>
             <ul>
-              <li> Web design and development team member with a focus on creating impactful User Experience .</li>
-              <li> Proficient in design tools like Figma, Photoshop to produce visually stunning and intuitive designs.</li>
-              <li> Successfully achieved effective design implementation Using HTML, CSS.</li>
-              <li> Explored other domains such as MySQL, PHP, JavaScript.</li>
-              <li> Collaborated closely with teams to deliver cutting-edge design solutions.</li>
+              <li> Responsible for regular deployments across various environemt's.</li>
+              <li> Implemented script to automate resolve the file synchronization problem in servers.</li>
+              <li> Resolved the Unused Docker Image Space Issue optimizing 100+ gb storage across all servers.</li>
+              <li> Exploring tool's and technologies such as Docker, Shell Scripting, Jenkins, Git-GitLab.</li>
+              <li> Performing access management along with sanity checks for the various servers.</li>
             </ul>
             </p>
           </div>
