heaing chnage to interhsip experince

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
           </div> -->
           <div class="resume-item">
             <h4>Shri Ramdeobaba College of Engineering and Management, Nagpur</h4>
-            <h5>CGPA - 7.58</h5>
+            <h5>CGPA - 7.75</h5>
             <h5>2020 - 2024</h5>
             <p><em>Bachelor of Technology - Information Technology</em></p>
             <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
@@ -519,7 +519,8 @@
           </div>
 
 
-          <h3 class="resume-title">Professional Experience</h3>
+<!--           <h3 class="resume-title">Professional Experience</h3> -->
+          <h3 class="resume-title">Internship Experience</h3>
 
           <div class="resume-item">
             <h4>Project Intern</h4>
@@ -552,6 +553,8 @@
             </ul>
             </p>
           </div>
+
+          <h3 class="resume-title">Postion of Responsiblity</h3>
           <div class="resume-item">
             <h4> Public Relations And Marketing Head </h4>
             <h5>  Students’ Representative Council </h5>
@@ -561,8 +564,8 @@
             <ul>
               <li> Functioned as a liaison between college management and students.</li>
               <li> Mentored 1st year students under mentorship program and led the team of 100+ members.</li>
-              <li> Pratishruti’23: Generated participation of 1,000+ students and 1,50,000/- sponsorship .</li>
-              <li> Coordinated with college faculty to plan & execute the Gyanodaya Ceremony for 1,000 students.</li>
+              <li> Pratishruti’23: Generated participation of 1500+ students and 1,50,000/- sponsorship .</li>
+              <li> Coordinated with college faculty to plan & execute the Gyanodaya Ceremony for 1000+ students.</li>
               <li> Managed social media handles and executed impactful campaigns to maximize engagement.</li>
               <!-- <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li> -->
             </ul>
