--- a/index.html
+++ b/index.html
@@ -557,9 +557,9 @@
           <h3 class="resume-title">Postion of Responsiblity</h3>
           <div class="resume-item">
             <h4> Public Relations And Marketing Head </h4>
-            <h5>  Students’ Representative Council </h5>
+            <h5>  Students’ Representative Council, RCOEM NAGPUR </h5>
             <h5> Sep 2022 – Aug 2023 </h5>
-            <p><em>RCOEM - Nagpur</em></p>
+<!--             <p><em>RCOEM - Nagpur</em></p> -->
             <p>
             <ul>
               <li> Functioned as a liaison between college management and students.</li>
