--- a/index.html
+++ b/index.html
@@ -593,13 +593,19 @@
           </div> -->
 
           <h3 class="resume-title">Certification Courses</h3>
-          <div class="resume-item">
+            <div class="resume-item">
             <h4><a href="https://learn.microsoft.com/api/credentials/share/en-in/HrushikeshDagwar-4872/9E6955F49C004F9E?sharingId=46164E3995B6B7D3">Microsoft Azure AZ-900<a/></h4>
             <h5>Microsoft</h5>
             <!-- <p><em>Shri Ramdeobaba College of Engineering and Management, Nagpur</em></p> -->
             <p>This foundational certification demonstrates my understanding of Azure's cloud computing principles, security measures, privacy protocols, compliance standards, and pricing models. It also solidifies my proficiency in Azure's core services, such as compute, storage, networking, and databases.</p>
-          </div>
-          <div class="resume-item">
+            </div>
+            <div class="resume-item">
+            <h4><a href="https://www.credly.com/badges/7923eee4-ba00-4004-a7bd-dc774bb23ece/public_url">GitHub Foundation<a/></h4>
+            <h5>GitHub</h5>
+            <!-- <p><em>Shri Ramdeobaba College of Engineering and Management, Nagpur</em></p> -->
+            <p>This certification validates my expertise in Git version control and GitHub's ecosystem. It affirms my ability to optimize team collaboration and streamline software development processes using GitHub's full suite of features.</p>
+            </div>
+            <div class="resume-item">
             <h4>AWS Fundamentals</h4>
             <h5>Coursera</h5>
             <!-- <p><em>Shri Ramdeobaba College of Engineering and Management, Nagpur</em></p> -->
