--- a/index.html
+++ b/index.html
@@ -606,11 +606,11 @@
             <p>This certification validates my expertise in Git version control and GitHub's ecosystem. It affirms my ability to optimize team collaboration and streamline software development processes using GitHub's full suite of features.</p>
             </div>
             <div class="resume-item">
-            <h4><a href="https://drive.google.com/file/d/1U1ikyctP4i9ipRaB7JjgqYUCY4VHqmos/view?usp=sharing">AWS Fundamentals</h4>
+            <h4><a href="https://drive.google.com/file/d/1U1ikyctP4i9ipRaB7JjgqYUCY4VHqmos/view?usp=sharing">AWS FUNDAMENTALS<a/></h4>
             <h5>Coursera</h5>
             <!-- <p><em>Shri Ramdeobaba College of Engineering and Management, Nagpur</em></p> -->
-            <p>This fundamental course on Coursera attests to my comprehension of Amazon Web Services (AWS) cloud computing principles. The course covers essential aspects including AWS security measures, privacy protocols, compliance standards, and pricing models. </div>
-  
+            <p>This fundamental course on Coursera attests to my comprehension of Amazon Web Services (AWS) cloud computing principles. The course covers essential aspects including AWS security measures, privacy protocols, compliance standards, and pricing models.</p>
+            </div>
         </div>
       </div>
 
